objects/ETran_Integration_Log__c.object
<CustomObject>
    <description>Log object to hold errors and synopses from the ETran PPP SBA Integration</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application that this request was run against</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>ETran Integration Logs</relationshipLabel>
        <relationshipName>ETran_Integration_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>Errors returned by this integration call</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <description>Synopsis of this integration call</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ETran Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EIL-{000000}</displayFormat>
        <label>ETran Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETran Integration Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>